--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<meta charset="UTF-8"/>
+<title>HD tecnology</title>
+</head>
+<boby>
+  <h1> tudo para seu stup gamer </h1>h1>
+  <p>processadores
+    placa mãe
+    memoria ram
+    placas de videos
+    ssd e hd
+    gabinete
+    fontes
+    e periféricos para seu pc
+  </p>
+<boby>
+</html>
