--- a/index.html
+++ b/index.html
@@ -5,15 +5,30 @@
 <title>HD tecnology</title>
 </head>
 <boby>
-  <h1> tudo para seu stup gamer </h1>h1>
-  <p>processadores
+  <h1> tudo para seu stup gamer </h1>
+  <p> PEÇAS QUE TEMOS A OFERECER AO NOSSOS CLIENTES
+      MONTE SEU PC
+    rocessadores
     placa mãe
     memoria ram
     placas de videos
     ssd e hd
     gabinete
     fontes
-    e periféricos para seu pc
+    PERIFERICOS
+    teclados mecanicos
+    e semimecanicos
+    mouses
+    redset
+    microfones
+     PEÇAS PARA SEU PC
+    pastas térmicas
+    espelhos de placas mães
+    sistemas operacionais
+    mesa gamer
+    cadeira gamer
+    monitores
   </p>
 <boby>
 </html>
+  
