--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="UTF-8"/>
@@ -7,29 +7,31 @@
 <boby>
 <h1> tudo para seu stup gamer </h1>
 
-  <p> PEÇAS QUE TEMOS A OFERECER AO NOSSOS CLIENTES
-      MONTE SEU PC
-    rocessadores
-    placa mãe
-    memoria ram
-    placas de videos
-    ssd e hd
-    gabinete
-    fontes
-    PERIFERICOS
-    teclados mecanicos
-    e semimecanicos
-    mouses
-    redset
-    microfones
-    PEÇAS PARA SEU PC
-    pastas térmicas
-    espelhos de placas mães
-    sistemas operacionais
-    mesa gamer
-    cadeira gamer
-    monitores
-  </p>
+  <p> PEÇAS QUE TEMOS A OFERECER AO NOSSOS CLIENTES</p>
+  <p> SEU PC</p> 
+  <P>processadores</P>
+  <P>memoria ram</P>
+  <P>placa mãe</P>
+  <P>placas de video</P>
+  <P>ssd e hd</P> 
+  <P>gabinetes</P>
+  <P>fontes</P>
+  <P> PERIFERICOS</P>
+  <P>teclados mecanicos e</P>
+  <P>semimecanicos</P>
+  <P>redsets</P>
+  <P>microfones</P>
+  <P> PEÇAS PARA PC</P>
+  <P>pastas térmicas</P>
+  <P>espelhos para placa mãe</P>
+  <P> SISTEMAS OPERACIONAIS</P>
+  <P>windows 11 todas as versões</P>
+  <P>windows 10 todas as versões</P>
+  <P>formatações todos os windows</P>
+  <P> SEU STUP</P>
+  <P>mesa gamer</P>
+  <P>cadeira gamer</P>
+  <P>monitores</P>
 <boby>
 </html>
   
