--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-!DOCTYPE HTML>
+
+ <!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="UTF-8"/>
 <title>HD tecnology</title>
 </head>
 <boby>
+  <font color="red">
 <h1> tudo para seu stup gamer </h1>
-
+<font>
+<font color="red">
   <p> PEÇAS QUE TEMOS A OFERECER AO NOSSOS CLIENTES</p>
+  <font>
   <p> SEU PC</p> 
   <P>processadores</P>
   <P>memoria ram</P>
@@ -16,7 +20,9 @@
   <P>ssd e hd</P> 
   <P>gabinetes</P>
   <P>fontes</P>
+  <font color="blue"
   <P> PERIFERICOS</P>
+  <font>
   <P>teclados mecanicos e</P>
   <P>semimecanicos</P>
   <P>redsets</P>
@@ -24,11 +30,15 @@
   <P> PEÇAS PARA PC</P>
   <P>pastas térmicas</P>
   <P>espelhos para placa mãe</P>
+  <font color="red"
   <P> SISTEMAS OPERACIONAIS</P>
+  <font>
   <P>windows 11 todas as versões</P>
   <P>windows 10 todas as versões</P>
   <P>formatações todos os windows</P>
+  <font color="red"
   <P> SEU STUP</P>
+  <font>
   <P>mesa gamer</P>
   <P>cadeira gamer</P>
   <P>monitores</P>
