--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <P>windows 11 todas as versões</P>
   <P>windows 10 todas as versões</P>
   <P>formatações todos os windows</P>
-  <font color="red"
+  <font color="blue"
   <P> SEU STUP</P>
   <font>
   <P>mesa gamer</P>
