--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
- <!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="UTF-8"/>
+<meta name="viewport" content="width=, initial-scale=1.0">
 <title>HD tecnology</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="reset.css">
 </head>
 <boby>
-  <font color="red">
-<h1> tudo para seu stup gamer </h1>
-<font>
-<font color="red">
+  
+<h1 class="titulo"> tudo para seu stup gamer </h1>
   <p> PEÇAS QUE TEMOS A OFERECER AO NOSSOS CLIENTES</p>
-  <font>
   <p> SEU PC</p> 
   <P>processadores</P>
   <P>memoria ram</P>
@@ -20,9 +19,7 @@
   <P>ssd e hd</P> 
   <P>gabinetes</P>
   <P>fontes</P>
-  <font color="blue"
   <P> PERIFERICOS</P>
-  <font>
   <P>teclados mecanicos e</P>
   <P>semimecanicos</P>
   <P>redsets</P>
@@ -30,15 +27,11 @@
   <P> PEÇAS PARA PC</P>
   <P>pastas térmicas</P>
   <P>espelhos para placa mãe</P>
-  <font color="red"
   <P> SISTEMAS OPERACIONAIS</P>
-  <font>
   <P>windows 11 todas as versões</P>
   <P>windows 10 todas as versões</P>
   <P>formatações todos os windows</P>
-  <font color="blue"
   <P> SEU STUP</P>
-  <font>
   <P>mesa gamer</P>
   <P>cadeira gamer</P>
   <P>monitores</P>
