--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 </head>
 <boby>
   
-<h1 class="titulo"> tudo para seu stup gamer </h1>
-  <p> PEÇAS QUE TEMOS A OFERECER AO NOSSOS CLIENTES</p>
-  <p> SEU PC</p> 
-  <P>processadores</P>
-  <P>memoria ram</P>
-  <P>placa mãe</P>
+<h1 style= "color: red;"class="titulo"> os  pecinhas 🥋 </h1>
+  <p>  meu primeiro site programando</p>
+  <p> violinha</p> 
+  <P>codigo html</P>
+  <P>pc</P>
   <P>placas de video</P>
   <P>ssd e hd</P> 
   <P>gabinetes</P>
