--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=, initial-scale=1.0">
-<title>HD tecnology</title>
+<title>Tenta não comédia🔫</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
 </head>
 <boby>
   
 <h1 style= "color: red;"class="titulo"> os  pecinhas 🥋 </h1>
-  <p>  meu primeiro site programando</p>
+  <p>class="alinhado-centro" meu primeiro site programando</p>
   <p> violinha</p> 
   <P>codigo html</P>
   <P>pc</P>
@@ -36,4 +36,3 @@
   <P>monitores</P>
 <boby>
 </html>
-  
