--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <boby>
   
 <h1 style= "color: red;"class="titulo"> os  pecinhas 🥋 </h1>
-  <p>class="alinhado-centro" meu primeiro site programando</p>
+  <p> meu primeiro site programando</p>
   <p> violinha</p> 
   <P>codigo html</P>
   <P>pc</P>
