--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -10,7 +11,7 @@
 <boby>
   
 <h1 style= "color: red;"class="titulo"> os  pecinhas 🥋 </h1>
-  <p> meu primeiro site programando</p>
+  <p> class="alinhado-centro" meu primeiro site programando</p>
   <p> violinha</p> 
   <P>codigo html</P>
   <P>pc</P>
