--- a/index.html
+++ b/index.html
@@ -11,29 +11,11 @@
 <boby>
   
 <h1 style= "color: red;"class="titulo"> os  pecinhas 🥋 </h1>
-  <p> class="alinhado-centro" meu primeiro site programando</p>
+  <p> meu primeiro site programando</p>
   <p> violinha</p> 
   <P>codigo html</P>
   <P>pc</P>
-  <P>placas de video</P>
-  <P>ssd e hd</P> 
-  <P>gabinetes</P>
-  <P>fontes</P>
-  <P> PERIFERICOS</P>
-  <P>teclados mecanicos e</P>
-  <P>semimecanicos</P>
-  <P>redsets</P>
-  <P>microfones</P>
-  <P> PEÇAS PARA PC</P>
-  <P>pastas térmicas</P>
-  <P>espelhos para placa mãe</P>
-  <P> SISTEMAS OPERACIONAIS</P>
-  <P>windows 11 todas as versões</P>
-  <P>windows 10 todas as versões</P>
-  <P>formatações todos os windows</P>
-  <P> SEU STUP</P>
-  <P>mesa gamer</P>
-  <P>cadeira gamer</P>
-  <P>monitores</P>
+  <p> quem leu é gay</p>
+  <
 <boby>
 </html>
