--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=, initial-scale=1.0">
-<title>Tenta não comédia🔫</title>
+<title>comédia🔫</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
 </head>
@@ -16,6 +16,5 @@
   <P>codigo html</P>
   <P>pc</P>
   <p> quem leu é gay</p>
-  <
 <boby>
 </html>
