--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=, initial-scale=1.0">
-<title>comédia🔫</title>
+<title>Comédia🔫</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
 </head>
