--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=, initial-scale=1.0">
-<title>Comédia🔫</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="reset.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marloca - Como Montar um PC</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<boby>
-  
-<h1 style= "color: red;"class="titulo"> os  pecinhas 🥋 </h1>
-  <p> meu primeiro site programando</p>
-  <p> violinha</p> 
-  <P>codigo html</P>
-  <P>pc</P>
-  <p> quem leu é gay</p>
-<boby>
-</html>
+<body>
+    <header>
+        <div class="container">
+            <h1>Marloca</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Passo a Passo</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>Guia Completo: Como Montar Seu PC</h2>
+            <p>Aprenda o passo a passo para montar seu computador com confiança!</p>
+        </section>
+        <section class="steps">
+            <h3>Passo a Passo</h3>
+            <ol>
+                <li>
+                    <h4>Escolha as Peças</h4>
+                    <p>Pesquise e adquira os componentes
