--- a/index.html
+++ b/index.html
@@ -30,3 +30,4 @@
                 <li>
                     <h4>Escolha as Peças</h4>
                     <p>Pesquise e adquira os componentes
+                        <p> após conferir corretamente cada pessa, você irá seprar para a montagem</p>
