--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marloca - Loja Online</title>
+    <title>Magazine luiza - Loja Online</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,10 +22,10 @@
     <main>
         <section class="product">
             <div class="product-details">
-                <h2>Produto em Destaque: Cadeira Gamer XYZ</h2>
-                <img src="cadeira.jpg" alt="Cadeira Gamer XYZ">
+                <h2>Produto em Destaque: PNEU NEUMATICOS HIFLY 205/55R16</h2>
+                <img src="cadeira.jpg" alt="PNEU NEUMATICOS HIFLY">
                 <p>Conforto e estilo para suas maratonas de jogos ou trabalho! A Cadeira Gamer XYZ é ergonômica, com ajuste de altura e apoio para os braços.</p>
-                <p class="price">Preço: R$ 999,90</p>
+                <p class="price">Preço: R$ 129,90</p>
                 <button onclick="comprar()">Comprar Agora</button>
             </div>
         </section>
