--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="product-details">
                 <h2>Produto em Destaque: PNEU NEUMATICOS HIFLY 205/55R16</h2>
                 <img src="cadeira.jpg" alt="PNEU NEUMATICOS HIFLY">
-                <p>Conforto e estilo para suas maratonas de jogos ou trabalho! A Cadeira Gamer XYZ é ergonômica, com ajuste de altura e apoio para os braços.</p>
+                <p>melhor linha de pneu, ótimos para dias chuvosos, trazendo o maximo de conforto e segurança para sua viajem.</p>
                 <p class="price">Preço: R$ 129,90</p>
                 <button onclick="comprar()">Comprar Agora</button>
             </div>
