--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <h2>Produto em Destaque: PNEU NEUMATICOS HIFLY 205/55R16</h2>
                 <img src="cadeira.jpg" alt="PNEU NEUMATICOS HIFLY">
                 <p>melhor linha de pneu, ótimos para dias chuvosos, trazendo o maximo de conforto e segurança para sua viajem.</p>
+                <img src="Downloads/wallpaperflare.com_wallpaper (1).jpg"
                 <p class="price">Preço: R$ 129,90</p>
                 <button onclick="comprar()">Comprar Agora</button>
             </div>
