--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -25,7 +26,7 @@
                 <h2>Produto em Destaque: PNEU NEUMATICOS HIFLY 205/55R16</h2>
                 <img src="cadeira.jpg" alt="PNEU NEUMATICOS HIFLY">
                 <p>melhor linha de pneu, ótimos para dias chuvosos, trazendo o maximo de conforto e segurança para sua viajem.</p>
-                <img src="Downloads/wallpaperflare.com_wallpaper (1).jpg"
+                <img src="logo html.png" alt="logo html simples">
                 <p class="price">Preço: R$ 129,90</p>
                 <button onclick="comprar()">Comprar Agora</button>
             </div>
