--- a/index.html
+++ b/index.html
@@ -1,47 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magazine luiza - Loja Online</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset=""UTF-8>
+    <meta name="width=device-width, initial-scale=1.0">
+    <title> teste com imagens</title>
 </head>
-<body>
-    <header>
-        <div class="container">
-            <h1>Marloca</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Produtos</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <section class="product">
-            <div class="product-details">
-                <h2>Produto em Destaque: PNEU NEUMATICOS HIFLY 205/55R16</h2>
-                <img src="cadeira.jpg" alt="PNEU NEUMATICOS HIFLY">
-                <p>melhor linha de pneu, ótimos para dias chuvosos, trazendo o maximo de conforto e segurança para sua viajem.</p>
-                <img src="logo html.png" alt="logo html simples">
-                <p class="price">Preço: R$ 129,90</p>
-                <button onclick="comprar()">Comprar Agora</button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Marloca - Todos os direitos reservados.</p>
-    </footer>
-
-    <script>
-        function comprar() {
-            alert("Obrigado por escolher Marloca! Redirecionando para a página de pagamento...");
-            // Aqui você pode redirecionar para a página de checkout
-            window.location.href = "checkout.html";
-        }
-    </script>
-</body>
+<boby>
+<h1>testando minha foto com imagem</h1>
+<img src="logo html.png" alt="foto html simples">
+</boby>
 </html>
