--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset=""UTF-8>
     <meta name="width=device-width, initial-scale=1.0">
     <title> teste com imagens</title>
+    <style>
+        color: blue; /* cor do texto em azul */
+    </style>
 </head>
 <boby>
 <h1>testando minha foto com imagem</h1>
+<h2> olá, sou o Marlon, tenho 14 ano este é o meu segundo site o primeiro não deu certo</h2>
 <img src="logo html.png" alt="foto html simples">
 </boby>
 </html>
