--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-        <h1>Zynex game</h1>
+        <h1>Zynex-game</h1>
     </header>
     <main>
         <h2>Bem-vindo!</h2>
