--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 </head>
 <body>
     <header>
-        <h1>Zynex-game</h1>
+        <h1>Zynex game</h1>
+    <img src="logo Zynex" alt="Logo Zynex" class="logo-inferior">
     </header>
     <main>
         <h2>Bem-vindo!</h2>
