--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
     <header>
         <h1>Zynex game</h1>
-    <img src="logo Zynex" alt="Logo Zynex" class="logo-inferior">
+    <img src="logo Zynex.png" alt="Logo Zynex" width="100">
     </header>
     <main>
         <h2>Bem-vindo!</h2>
